--- a/public/logs.html
+++ b/public/logs.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>บันทึก</title>
+  <title>📜 บันทึก</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
   <style>
@@ -13,82 +13,91 @@
       background: url('https://i.pinimg.com/1200x/80/7b/0d/807b0d00ea3aab1bdf89012248e9d97a.jpg') no-repeat center center fixed; 
       background-size: cover; 
       color: #FFFFFF; 
-      line-height: 1.6; 
-      padding: 20px; 
+      line-height: 1.4; 
+      padding: 10px; 
+      font-size: 14px; 
     }
     .header { 
       display: flex; 
       justify-content: flex-end; 
       align-items: center; 
-      margin-bottom: 20px; 
+      margin-bottom: 10px; 
     }
     .menu-btn { 
       background: rgba(30, 58, 138, 0.9); 
       border: none; 
-      padding: 10px; 
-      border-radius: 6px; 
+      padding: 8px; 
+      border-radius: 4px; 
       cursor: pointer; 
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3); 
-      backdrop-filter: blur(5px); 
+      box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3); 
     }
-    .menu-btn i { color: #FFFFFF; font-size: 1.5em; }
+    .menu-btn i { color: #FFFFFF; font-size: 1.2em; }
     .nav-menu { 
       display: none; 
       position: absolute; 
-      top: 60px; 
-      right: 20px; 
+      top: 40px; 
+      right: 10px; 
       background: rgba(30, 58, 138, 0.9); 
-      border-radius: 8px; 
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3); 
-      backdrop-filter: blur(5px); 
+      border-radius: 6px; 
+      box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3); 
       flex-direction: column; 
-      width: 200px; 
-      padding: 10px; 
+      width: 160px; 
+      padding: 5px; 
     }
     .nav-menu.active { display: flex; }
     .nav-menu a { 
       color: #FFFFFF; 
       text-decoration: none; 
       font-weight: 600; 
-      padding: 10px; 
-      border-radius: 6px; 
+      padding: 8px; 
+      border-radius: 4px; 
       transition: background 0.3s; 
       display: flex; 
       align-items: center; 
+      font-size: 12px; 
     }
     .nav-menu a:hover { background: rgba(59, 130, 246, 0.8); }
-    h1, h2 { font-weight: 700; margin-bottom: 20px; text-align: center; text-shadow: 0 0 5px rgba(255, 255, 255, 0.5); }
-    h1 { font-size: 1.8em; }
-    h2 { font-size: 1.4em; }
-    .container { max-width: 1200px; margin: 0 auto; }
+    h1, h2 { 
+      font-weight: 700; 
+      margin-bottom: 10px; 
+      text-align: center; 
+      text-shadow: 0 0 3px rgba(255, 255, 255, 0.5); 
+    }
+    h1 { font-size: 1.4em; }
+    h2 { font-size: 1.1em; }
+    .container { max-width: 100%; margin: 0 auto; }
     .stats { 
       display: grid; 
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
-      gap: 15px; 
-      margin-bottom: 20px; 
+      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); 
+      gap: 10px; 
+      margin-bottom: 10px; 
     }
     .stat-card { 
       background: rgba(255, 255, 255, 0.95); 
-      padding: 15px; 
-      border-radius: 8px; 
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3); 
+      padding: 10px; 
+      border-radius: 6px; 
+      box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3); 
       text-align: center; 
     }
-    .stat-card h3 { font-size: 1.1em; color: #3B82F6; margin-bottom: 5px; }
-    .stat-card p { font-size: 1.2em; font-weight: 600; color: #1E3A8A; }
+    .stat-card h3 { font-size: 0.9em; color: #3B82F6; margin-bottom: 3px; }
+    .stat-card p { font-size: 1em; font-weight: 600; color: #1E3A8A; }
     .logs { 
       background: rgba(255, 255, 255, 0.95); 
-      padding: 15px; 
-      border-radius: 8px; 
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3); 
-      max-height: 400px; 
+      padding: 10px; 
+      border-radius: 6px; 
+      box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3); 
+      max-height: 300px; 
       overflow-y: auto; 
     }
-    .log-entry { padding: 8px 0; border-bottom: 1px solid #E5E7EB; color: #1E3A8A; }
-    ::-webkit-scrollbar { width: 8px; }
+    .log-entry { padding: 5px 0; border-bottom: 1px solid #E5E7EB; color: #1E3A8A; font-size: 12px; }
+    ::-webkit-scrollbar { width: 6px; }
     ::-webkit-scrollbar-track { background: rgba(255, 255, 255, 0.8); }
-    ::-webkit-scrollbar-thumb { background: #3B82F6; border-radius: 4px; }
-    i { margin-right: 8px; }
+    ::-webkit-scrollbar-thumb { background: #3B82F6; border-radius: 3px; }
+    i { margin-right: 5px; font-size: 0.9em; }
+    @media (min-width: 768px) {
+      .stats { grid-template-columns: repeat(5, 1fr); }
+      .logs { max-height: 400px; }
+    }
   </style>
 </head>
 <body>
@@ -98,6 +107,7 @@
       <a href="/"><i class="fas fa-home"></i> หน้าหลัก</a>
       <a href="/phones"><i class="fas fa-phone"></i> รายชื่อเบอร์</a>
       <a href="/details"><i class="fas fa-wallet"></i> รายละเอียดเงิน</a>
+      <a href="/expired"><i class="fas fa-calendar-times"></i> เบอร์ที่หมดอายุ</a>
       <a href="/logs"><i class="fas fa-file-alt"></i> บันทึก</a>
       <a href="/admin-login"><i class="fas fa-user-shield"></i> แอดมิน</a>
     </div>
@@ -107,9 +117,9 @@
     <h2><i class="fas fa-chart-bar"></i> สถิติ</h2>
     <div class="stats">
       <div class="stat-card"><h3><i class="fas fa-link"></i> ลิงก์ทั้งหมด</h3><p id="totalLinks">0</p></div>
-      <div class="stat-card"><h3><i class="fas fa-check-circle"></i> ลิงก์สำเร็จ</h3><p id="successfulLinks">0</p></div>
-      <div class="stat-card"><h3><i class="fas fa-times-circle"></i> ลิงก์ล้มเหลว</h3><p id="failedLinks">0</p></div>
-      <div class="stat-card"><h3><i class="fas fa-exclamation-triangle"></i> ข้อผิดพลาดล่าสุด</h3><p id="lastError">ไม่มี</p></div>
+      <div class="stat-card"><h3><i class="fas fa-check-circle"></i> สำเร็จ</h3><p id="successfulLinks">0</p></div>
+      <div class="stat-card"><h3><i class="fas fa-times-circle"></i> ล้มเหลว</h3><p id="failedLinks">0</p></div>
+      <div class="stat-card"><h3><i class="fas fa-exclamation-triangle"></i> ข้อผิดพลาด</h3><p id="lastError">ไม่มี</p></div>
       <div class="stat-card"><h3><i class="fas fa-users"></i> จำนวนกลุ่ม</h3><p id="totalGroups">0</p></div>
     </div>
     <h2><i class="fas fa-list-ul"></i> รายการบันทึก</h2>
